[tool.poetry]
name = "conda_poetry_liaison"
version = "0.0.0"
description = "Make conda and poetry communicate"
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
cpl-deps = "conda_poetry_liaison.deps:main"
cpl-clean = "conda_poetry_liaison.clean:main"

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
poetry-dynamic-versioning = "^1.1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.0"
pre-commit = "^3.5.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base) }}
    {%- else -%}
        {{ serialize_pep440(base, post=distance) }}
    {%- endif -%}
"""

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0"
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''


[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true
skip = [
  '.bzr',
  '.direnv',
  '.eggs',
  '.git',
  '.hg',
  '.mypy_cache',
  '.nox',
  '.pants.d',
  '.svn',
  '.tox',
  '.venv',
  '__pypackages__',
  '_build',
  'buck-out',
  'build',
  'dist',
  'node_modules',
  'venv',
]
